cambios de 0 a 1 y de ingles a espaniol

--- a/K Means.ipynb
+++ b/K Means.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "** Lea en el archivo College_Data usando read_csv. Configure la primera columna como índice.**"
+    "** Lea en el archivo breast_cancer.csv usando read_csv. Configure la primera columna como índice.**"
    ]
   },
   {
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -130,7 +130,7 @@
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -142,7 +142,7 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -154,7 +154,7 @@
        "      <td>3</td>\n",
        "      <td>7</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -166,7 +166,7 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -199,14 +199,14 @@
        "\n",
        "                   cromatina_blanda  nucleolos_normales  mitosis  clase  \n",
        "espesor_del_grupo                                                        \n",
-       "5                                 3                   1        1      2  \n",
-       "5                                 3                   2        1      2  \n",
-       "3                                 3                   1        1      2  \n",
-       "6                                 3                   7        1      2  \n",
-       "4                                 3                   1        1      2  "
+       "5                                 3                   1        1      0  \n",
+       "5                                 3                   2        1      0  \n",
+       "3                                 3                   1        1      0  \n",
+       "6                                 3                   7        1      0  \n",
+       "4                                 3                   1        1      0  "
       ]
      },
-     "execution_count": 76,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "      <td>3.490334</td>\n",
        "      <td>2.989455</td>\n",
        "      <td>1.637961</td>\n",
-       "      <td>2.731107</td>\n",
+       "      <td>0.365554</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
@@ -324,7 +324,7 @@
        "      <td>2.324925</td>\n",
        "      <td>3.091315</td>\n",
        "      <td>1.773941</td>\n",
-       "      <td>0.964018</td>\n",
+       "      <td>0.482009</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -336,7 +336,7 @@
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
@@ -348,7 +348,7 @@
        "      <td>2.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
@@ -360,7 +360,7 @@
        "      <td>3.000000</td>\n",
        "      <td>1.000000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>2.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
@@ -372,7 +372,7 @@
        "      <td>5.000000</td>\n",
        "      <td>4.000000</td>\n",
        "      <td>1.000000</td>\n",
-       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -384,7 +384,7 @@
        "      <td>10.000000</td>\n",
        "      <td>10.000000</td>\n",
        "      <td>10.000000</td>\n",
-       "      <td>4.000000</td>\n",
+       "      <td>1.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -413,31 +413,22 @@
        "\n",
        "       cromatina_blanda  nucleolos_normales     mitosis       clase  \n",
        "count        569.000000          569.000000  569.000000  569.000000  \n",
-       "mean           3.490334            2.989455    1.637961    2.731107  \n",
-       "std            2.324925            3.091315    1.773941    0.964018  \n",
-       "min            1.000000            1.000000    1.000000    2.000000  \n",
-       "25%            2.000000            1.000000    1.000000    2.000000  \n",
-       "50%            3.000000            1.000000    1.000000    2.000000  \n",
-       "75%            5.000000            4.000000    1.000000    4.000000  \n",
-       "max           10.000000           10.000000   10.000000    4.000000  "
+       "mean           3.490334            2.989455    1.637961    0.365554  \n",
+       "std            2.324925            3.091315    1.773941    0.482009  \n",
+       "min            1.000000            1.000000    1.000000    0.000000  \n",
+       "25%            2.000000            1.000000    1.000000    0.000000  \n",
+       "50%            3.000000            1.000000    1.000000    0.000000  \n",
+       "75%            5.000000            4.000000    1.000000    1.000000  \n",
+       "max           10.000000           10.000000   10.000000    1.000000  "
       ]
      },
-     "execution_count": 78,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "cd.describe()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "cd['clase'] = cd['clase'].apply(lambda n:  1 if n == 4 else 0)"
    ]
   },
   {
@@ -453,7 +444,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +487,7 @@
        "    random_state=None, tol=0.0001, verbose=0)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +519,7 @@
        "         2.86666667e+00,  1.00000000e+00]])"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -539,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -555,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 43,
    "metadata": {
     "scrolled": true
    },
@@ -808,7 +799,7 @@
        "4                        0  "
       ]
      },
-     "execution_count": 85,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 44,
    "metadata": {
     "scrolled": true
    },
@@ -847,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -880,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -915,7 +906,7 @@
        "      dtype=int32)"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
