--- a/Random forest cancer.ipynb
+++ b/Random forest cancer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,16 +53,16 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>clump_thickness</th>\n",
-       "      <th>uniformity_of_cell_size</th>\n",
-       "      <th>uniformity_of_cell_shape</th>\n",
-       "      <th>marginal_adhesion</th>\n",
-       "      <th>single_epithelial_cell_size</th>\n",
-       "      <th>bare_nuclei</th>\n",
-       "      <th>bland_chromatin</th>\n",
-       "      <th>normal_nucleoli</th>\n",
+       "      <th>espesor_del_grupo</th>\n",
+       "      <th>uniformidad_del_tamano_de_celda</th>\n",
+       "      <th>uniformidad_de_forma_de_celda</th>\n",
+       "      <th>adherencia_marginal</th>\n",
+       "      <th>tamano_de_una_celula_epitelial</th>\n",
+       "      <th>nucleos_desnudos</th>\n",
+       "      <th>cromatina_blanda</th>\n",
+       "      <th>nucleolos_normales</th>\n",
        "      <th>mitosis</th>\n",
-       "      <th>class</th>\n",
+       "      <th>clase</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -77,7 +77,7 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -90,7 +90,7 @@
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -103,7 +103,7 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -116,7 +116,7 @@
        "      <td>3</td>\n",
        "      <td>7</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -129,36 +129,43 @@
        "      <td>3</td>\n",
        "      <td>1</td>\n",
        "      <td>1</td>\n",
-       "      <td>2</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   clump_thickness  uniformity_of_cell_size  uniformity_of_cell_shape  \\\n",
-       "0                5                        1                         1   \n",
-       "1                5                        4                         4   \n",
-       "2                3                        1                         1   \n",
-       "3                6                        8                         8   \n",
-       "4                4                        1                         1   \n",
+       "   espesor_del_grupo  uniformidad_del_tamano_de_celda  \\\n",
+       "0                  5                                1   \n",
+       "1                  5                                4   \n",
+       "2                  3                                1   \n",
+       "3                  6                                8   \n",
+       "4                  4                                1   \n",
        "\n",
-       "   marginal_adhesion  single_epithelial_cell_size  bare_nuclei  \\\n",
-       "0                  1                            2            1   \n",
-       "1                  5                            7           10   \n",
-       "2                  1                            2            2   \n",
-       "3                  1                            3            4   \n",
-       "4                  3                            2            1   \n",
+       "   uniformidad_de_forma_de_celda  adherencia_marginal  \\\n",
+       "0                              1                    1   \n",
+       "1                              4                    5   \n",
+       "2                              1                    1   \n",
+       "3                              8                    1   \n",
+       "4                              1                    3   \n",
        "\n",
-       "   bland_chromatin  normal_nucleoli  mitosis  class  \n",
-       "0                3                1        1      2  \n",
-       "1                3                2        1      2  \n",
-       "2                3                1        1      2  \n",
-       "3                3                7        1      2  \n",
-       "4                3                1        1      2  "
+       "   tamano_de_una_celula_epitelial  nucleos_desnudos  cromatina_blanda  \\\n",
+       "0                               2                 1                 3   \n",
+       "1                               7                10                 3   \n",
+       "2                               2                 2                 3   \n",
+       "3                               3                 4                 3   \n",
+       "4                               2                 1                 3   \n",
+       "\n",
+       "   nucleolos_normales  mitosis  clase  \n",
+       "0                   1        1      0  \n",
+       "1                   2        1      0  \n",
+       "2                   1        1      0  \n",
+       "3                   7        1      0  \n",
+       "4                   1        1      0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -176,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(ds.drop('class', axis=1), ds['class'], test_size=0.3)"
+    "X_train, X_test, y_train, y_test = train_test_split(ds.drop('clase', axis=1), ds['clase'], test_size=0.3)"
    ]
   },
   {
@@ -210,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +240,7 @@
        "            oob_score=False, random_state=101, verbose=0, warm_start=False)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,11 +267,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics import classification_report,confusion_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.97      0.96      0.96       115\n",
+      "           1       0.91      0.95      0.93        56\n",
+      "\n",
+      "   micro avg       0.95      0.95      0.95       171\n",
+      "   macro avg       0.94      0.95      0.95       171\n",
+      "weighted avg       0.95      0.95      0.95       171\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(classification_report(y_test,rfc_pred))"
    ]
   },
   {
@@ -276,33 +308,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           2       0.96      0.98      0.97        97\n",
-      "           4       0.97      0.95      0.96        74\n",
-      "\n",
-      "   micro avg       0.96      0.96      0.96       171\n",
-      "   macro avg       0.97      0.96      0.96       171\n",
-      "weighted avg       0.97      0.96      0.96       171\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(classification_report(y_test,rfc_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[95  2]\n",
-      " [ 4 70]]\n"
+      "[[110   5]\n",
+      " [  3  53]]\n"
      ]
     }
    ],
@@ -312,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -326,13 +333,6 @@
    "source": [
     "print(\"La precisión es: {}%\".format(((102 + 59)/167)*100))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
