--- a/SVM.ipynb
+++ b/SVM.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,112 +51,119 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>clump_thickness</th>\n",
-       "      <th>uniformity_of_cell_size</th>\n",
-       "      <th>uniformity_of_cell_shape</th>\n",
-       "      <th>marginal_adhesion</th>\n",
-       "      <th>single_epithelial_cell_size</th>\n",
-       "      <th>bare_nuclei</th>\n",
-       "      <th>bland_chromatin</th>\n",
-       "      <th>normal_nucleoli</th>\n",
+       "      <th>espesor_del_grupo</th>\n",
+       "      <th>uniformidad_del_tamano_de_celda</th>\n",
+       "      <th>uniformidad_de_forma_de_celda</th>\n",
+       "      <th>adherencia_marginal</th>\n",
+       "      <th>tamano_de_una_celula_epitelial</th>\n",
+       "      <th>nucleos_desnudos</th>\n",
+       "      <th>cromatina_blanda</th>\n",
+       "      <th>nucleolos_normales</th>\n",
        "      <th>mitosis</th>\n",
-       "      <th>class</th>\n",
+       "      <th>clase</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>3</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   clump_thickness  uniformity_of_cell_size  uniformity_of_cell_shape  \\\n",
-       "0              5.0                      1.0                       1.0   \n",
-       "1              5.0                      4.0                       4.0   \n",
-       "2              3.0                      1.0                       1.0   \n",
-       "3              6.0                      8.0                       8.0   \n",
-       "4              4.0                      1.0                       1.0   \n",
+       "   espesor_del_grupo  uniformidad_del_tamano_de_celda  \\\n",
+       "0                  5                                1   \n",
+       "1                  5                                4   \n",
+       "2                  3                                1   \n",
+       "3                  6                                8   \n",
+       "4                  4                                1   \n",
        "\n",
-       "   marginal_adhesion  single_epithelial_cell_size  bare_nuclei  \\\n",
-       "0                1.0                          2.0          1.0   \n",
-       "1                5.0                          7.0         10.0   \n",
-       "2                1.0                          2.0          2.0   \n",
-       "3                1.0                          3.0          4.0   \n",
-       "4                3.0                          2.0          1.0   \n",
+       "   uniformidad_de_forma_de_celda  adherencia_marginal  \\\n",
+       "0                              1                    1   \n",
+       "1                              4                    5   \n",
+       "2                              1                    1   \n",
+       "3                              8                    1   \n",
+       "4                              1                    3   \n",
        "\n",
-       "   bland_chromatin  normal_nucleoli  mitosis  class  \n",
-       "0              3.0              1.0      1.0    2.0  \n",
-       "1              3.0              2.0      1.0    2.0  \n",
-       "2              3.0              1.0      1.0    2.0  \n",
-       "3              3.0              7.0      1.0    2.0  \n",
-       "4              3.0              1.0      1.0    2.0  "
+       "   tamano_de_una_celula_epitelial  nucleos_desnudos  cromatina_blanda  \\\n",
+       "0                               2                 1                 3   \n",
+       "1                               7                10                 3   \n",
+       "2                               2                 2                 3   \n",
+       "3                               3                 4                 3   \n",
+       "4                               2                 1                 3   \n",
+       "\n",
+       "   nucleolos_normales  mitosis  clase  \n",
+       "0                   1        1      0  \n",
+       "1                   2        1      0  \n",
+       "2                   1        1      0  \n",
+       "3                   7        1      0  \n",
+       "4                   1        1      0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,11 +190,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train, X_test, y_train, y_test = train_test_split(ds.drop('class', axis=1), ds['class'], test_size=0.3)"
+    "X_train, X_test, y_train, y_test = train_test_split(ds.drop('clase', axis=1), ds['clase'], test_size=0.3)"
    ]
   },
   {
@@ -199,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +244,7 @@
        "  shrinking=True, tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -264,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -273,15 +280,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[101   7]\n",
-      " [  0  63]]\n"
+      "[[96  2]\n",
+      " [ 0 73]]\n"
      ]
     }
    ],
@@ -291,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -300,12 +307,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           2       1.00      0.94      0.97       108\n",
-      "           4       0.90      1.00      0.95        63\n",
+      "           0       1.00      0.98      0.99        98\n",
+      "           1       0.97      1.00      0.99        73\n",
       "\n",
-      "   micro avg       0.96      0.96      0.96       171\n",
-      "   macro avg       0.95      0.97      0.96       171\n",
-      "weighted avg       0.96      0.96      0.96       171\n",
+      "   micro avg       0.99      0.99      0.99       171\n",
+      "   macro avg       0.99      0.99      0.99       171\n",
+      "weighted avg       0.99      0.99      0.99       171\n",
       "\n"
      ]
     }
@@ -316,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -330,13 +337,6 @@
    "source": [
     "print(\"La precisión es: {}%\".format(((110 + 53)/167)*100))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
