add matriz de confusion y precision@

--- a/Regresion_Logistica.ipynb
+++ b/Regresion_Logistica.ipynb
@@ -2113,11 +2113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Evaluación del modelo\n",
-    "\n",
-    "Evaluemos el rendimiento de nuestro modelo calculando la suma residual de cuadrados y la puntuación de varianza explicada (R ^ 2).\n",
-    "\n",
-    "** Calcule el error absoluto promedio, el error cuadrado promedio y la raíz del error cuadrático promedio.**"
+    "## Matriz de confusion"
    ]
   },
   {
@@ -2162,6 +2158,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Evaluación del modelo\n",
+    "\n",
+    "Evaluemos el rendimiento de nuestro modelo calculando la suma residual de cuadrados y la puntuación de varianza explicada (R ^ 2).\n",
+    "\n",
+    "** Calcule el error absoluto promedio, el error cuadrado promedio y la raíz del error cuadrático promedio.**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 31,
    "metadata": {},
@@ -2193,6 +2200,30 @@
    ],
    "source": [
     "print(classification_report(y_test,predictions))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$ Exactitud = \\frac{TP + TN}{\\sum Población\\;total}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La exactitud es: 95.32163742690058%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"La exactitud es: {}%\".format(((arregloMC[0][0] + arregloMC[1][1])/171)*100))"
    ]
   },
   {
